src/objects/Reinsurer__c.object
<CustomObject>
    <description>Used for the re-insurers details related to the DIP process</description>
    <fields>
        <fullName>Cert_to_operate_in_its_country_of_dom__c</fullName>
        <label>Cert. to operate in its country of dom.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmation_of_financial_strength_rate__c</fullName>
        <label>Confirmation of financial strength rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_percentage__c</fullName>
        <label>Coverage percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DIP_Details__c</fullName>
        <label>DIP Details</label>
        <referenceTo>DIP_Details__c</referenceTo>
        <relationshipLabel>Re-insurers</relationshipLabel>
        <relationshipName>Re_insurers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Disclosure_covering_the_last_10_years__c</fullName>
        <label>Disclosure covering the last 10 years</label>
        <picklist>
            <picklistValues>
                <fullName>Accusations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fines or penalties assessed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lawsuits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory actions</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Final_signed_copies_of_all_agreements__c</fullName>
        <label>Final, signed copies of all agreements</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Information_Sheet_Signed_by_Area_Manager__c</fullName>
        <label>Information Sheet Signed by Area Manager</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_recent_annual_report__c</fullName>
        <label>Most recent annual report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_disclosure_agreement__c</fullName>
        <label>Non-disclosure agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opinion_from_local_counsel__c</fullName>
        <label>Opinion from local counsel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Re_insurer_name__c</fullName>
        <label>Re-insurer name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regulatory_appr_of_reinsurance_agreemen__c</fullName>
        <label>Regulatory appr. of reinsurance agreemen</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Underwriter_s_name_contact_information__c</fullName>
        <label>Underwriter’s name &amp; contact information</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Re-insurer</label>
    <nameField>
        <displayFormat>AS-{00000}</displayFormat>
        <label>Re-insurer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Re-insurers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>